# kaprino

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  HowToBuild.md  LICENSE  README.md  bootstrap.bat  bootstrap.py  bootstrap.sh  build.ps1  build.sh  configure.bat  configure.sh  syntax.md
src/interpreter/: ArgsManager.h  CMakeLists.txt  DependencySolver.cpp  DependencySolver.h  ExecutableGenerator.cpp  ExecutableGenerator.h  FunctionManager.cpp  KaprinoAccelerator.h  KaprinoLogger.h  KaprinoParser.impl.cpp  PackagePathManager.cpp  PackagePathManager.h  StatementVisitor.h  TypeManager.cpp  TypeManager.h  VariableManager.cpp  VariableManager.h
src/interpreter/abstructs/: StatementObject.h
src/interpreter/internallib/: InternalFuncs.h  PowInternal.cpp  PrintfInternal.cpp  PrintfInternal.h  ScanfInternal.cpp
src/interpreter/visitor/: CodeBlockStatementVisitor.cpp  FunctionTypeVisitor.cpp  ProgramVisitor.cpp
src/interpreter/visitor/assignee/: AccessAssigneeVisitor.cpp  ParameterAssigneeVisitor.cpp
src/interpreter/visitor/cstatements/: ClassStructureObject.cpp  ClassStructureObject.h  LetCStatementVisitor.cpp
src/interpreter/visitor/expr/: AccessExprVisitor.cpp  AddExprVisitor.cpp  BooleanExprVisitor.cpp  BooleanOpExprVisitor.cpp  BracketExprVisitor.cpp  CompareExprVisitor.cpp  FunctionExprVisitor.cpp  MulExprVisitor.cpp  NotExprVisitor.cpp  NumberExprVisitor.cpp  ParameterExprVisitor.cpp  RealNumberExprVisitor.cpp  TextExprVisitor.cpp  UpArrowExprVisitor copy.cpp  UpArrowExprVisitor.cpp
src/interpreter/visitor/statements/: AssignStatementVisitor.cpp  ClassStatementVisitor.cpp  DefineFunctionStatementVisitor.cpp  DefineProcessStatementVisitor.cpp  ExitStatementVisitor.cpp  ExprStatementVisitor.cpp  IfStatementVisitor.cpp  LetStatementVisitor.cpp  LoopStatementVisitor.cpp  PrintStatementVisitor.cpp  ReadStatementVisitor.cpp  RequireStatementVisitor.cpp  SubmitStatementVisitor.cpp
src/kgen/: CMakeLists.txt  Cargo.toml  README.md
src/kgen/include/kgen/: CodeGenerator.h  KgenAccelerator.h  NotificationManager.h
src/kgen/include/kgen/internallib/: InternalFuncs.h
src/kgen/include/kgen/notifications/: NotificationManager.h
src/kgen/include/kgen/solvers/: DependencySolver.h  FunctionManager.h  TypeManager.h  VariableManager.h
src/kgen/include/kgen/visitors/: AssigneeObject.h  CStatementObject.h  ClassStructureObject.h  ContextObject.h  ExprObject.h  FunctionTypeObject.h  KgenErrorListener.h  StatementObject.h  StatementVisitor.h
src/kgen/src/: CodeGenerator.cpp  lib.rs  program_object.rs
src/kgen/src/ast/: mod.rs
src/kgen/src/ast/exprs/: exponents_object.rs  expr_object.rs  function_call_object.rs  mod.rs  numbers_object.rs  param_object.rs  string_object.rs  term_object.rs
src/kgen/src/ast/functions/: expr_function.rs  external_function.rs  mod.rs  statement_function.rs
src/kgen/src/ast/statements/: assign_object.rs  break_object.rs  call_object.rs  if_object.rs  let_object.rs  loop_object.rs  mod.rs  ret_object.rs
src/kgen/src/error/: error_token.rs  mod.rs
src/kgen/src/exprs/: exponents_object.rs  expr_object.rs  factor_object.rs  function_call_object.rs  mod.rs  numbers_object.rs  param_object.rs  string_object.rs  term_object.rs
src/kgen/src/exprs/test/: jit_compile.rs  mod.rs  test_exponents_object.rs  test_expr_object.rs
src/kgen/src/functions/: args_object.rs  expr_function.rs  external_function.rs  function_object.rs  function_type_object.rs  mod.rs  statement_function.rs
src/kgen/src/functions/test/: mod.rs
src/kgen/src/internallib/: PowInternal.cpp  PrintfInternal.cpp  ScanfInternal.cpp
src/kgen/src/jit/: execute_expr.rs  execute_function.rs  execute_statement.rs  mod.rs
src/kgen/src/jit/test/: mod.rs
src/kgen/src/notifications/: NotificationManager.cpp
src/kgen/src/parsers/: mod.rs
src/kgen/src/parsers/exprs/: exponents_object.rs  mod.rs  term_object.rs
src/kgen/src/parsers/factors/: function_call_object.rs  mod.rs  numbers_object.rs  param_object.rs  paren_object.rs  string_object.rs
src/kgen/src/parsers/functions/: expr_function.rs  external_function.rs  mod.rs  (+1 more)
src/kgen/src/resolvers/: dictionary.rs  function_resolver.rs  mod.rs  parameter_resolver.rs  type_resolver.rs
src/kgen/src/solvers/: DependencySolver.cpp  FunctionManager.cpp  TypeManager.cpp  VariableManager.cpp
src/kgen/src/statements/: let_object.rs  mod.rs  ret_object.rs  statement_object.rs
src/kgen/src/values/: exponents_object.rs  mod.rs  paren_object.rs  term_object.rs
src/kgen/src/visitors/: CodeBlockStatementVisitor.cpp  FunctionTypeVisitor.cpp  KgenErrorListener.cpp  ProgramVisitor.cpp
src/kpr/: Cargo.toml
src/kpr/src/: args_manager.rs  lib.rs  main.rs
src/kpr/src/kprc/: mod.rs
src/kprc/: CMakeLists.txt  Cargo.toml  DependencySolver.cpp  DependencySolver.h  FunctionManager.cpp  FunctionManager.h  KaprinoErrorListener.cpp  KaprinoErrorListener.h  KaprinoParser.impl.cpp  README.md  VariableManager.cpp
src/kprc/include/kprc/: ArgsManager.h  ExecutableGenerator.h
src/kprc/src/: ArgsManager.cpp  ExecutableGenerator.cpp  KprcProgram.cpp  main.rs
src/kprc/src/notifications/: KprcNotificationHandler.cpp
src/kprc/visitor/: CodeBlockStatementVisitor.cpp  FunctionTypeVisitor.cpp  ProgramVisitor.cpp
src/kprc/visitor/assignee/: AssigneeObject.h  ParameterAssigneeVisitor.cpp
src/kprc/visitor/cstatements/: CStatementObject.h
src/kprc/visitor/expr/: AccessExprVisitor.cpp  AddExprVisitor.cpp  BooleanExprVisitor.cpp  BooleanOpExprVisitor.cpp  CompareExprVisitor.cpp  ExprObject.h  FunctionExprVisitor.cpp  NotExprVisitor.cpp  NumberExprVisitor.cpp  ParameterExprVisitor.cpp  TextExprVisitor.cpp  UpArrowExprVisitor.cpp
src/kprc/visitor/statements/: AssignStatementVisitor.cpp  ClassStatementVisitor.cpp  DefineFunctionStatementVisitor.cpp  DefineProcessStatementVisitor.cpp  ExitStatementVisitor.cpp  ExprStatementVisitor.cpp  IfStatementVisitor.cpp  LetStatementVisitor.cpp  LoopStatementVisitor.cpp  PrintStatementVisitor.cpp  RequireStatementVisitor.cpp
src/stdlib/: CMakeLists.txt  README.md  terminal.impl.c  terminal.kpr
(+122 files in other folders)
