[package]
name = "kgen"
version = "0.1.0"
authors = ["Akihisa Yagi <capra314cabra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm9-0"] }
nom = "^6.0.0"
