[package]
name = "kgen"
version = "0.1.0"
authors = ["Akihisa Yagi <capra314cabra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
regex = "^1.4.3"
nom = { version = "^6.1.2", features = ["regexp"] }
nom-greedyerror = "0.3.1"
nom_locate = "^4.0.0"
