[package]
name = "kprc"
version = "0.1.0"
authors = ["Akihisa Yagi <capra314cabra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.kgen]
path = "../kgen"

[dependencies.kpr]
path = "../kpr"

[dependencies]
clap = "4.0.8"
